fixed readablity on light mode

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,3 +2,7 @@
   text-shadow: 0px 0px 10px white;
   /* scale: 1.1; */
 }
+
+*{
+  color: white;
+}
